Fri Aug 15 03:23:27 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Added a timer to save the buddy list after 2 seconds when one or
	    more groups are expanded or collapsed. This prevents a buddy list
	    write every time the group is expanded or collapsed, which was
	    slow and wasteful.

Fri Aug 15 03:08:17 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - The account button in the conversations window now longer shows
	    its state as active.
	  - Removed old stuff that's not needed anymore.

Fri Aug 15 02:53:00 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Changing the tabs now focuses the entry box 100% of the time,
	    hopefully, and scrolls the text view to the bottom.

Fri Aug 15 02:45:02 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - The text view in chats now scrolls to the bottom when toggling
	    the Show User List button.

Fri Aug 15 02:41:22 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - The user list button wasn't being updated to the state of the
	    current tab. Fixed.

Fri Aug 15 02:32:17 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - The current chat tab no longer gets highlighting, and the
	    colors don't get "stuck."

Fri Aug 15 02:25:19 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - The user list toggle button never got re-added after changing
	    how the toolbar was created. Fixed.

Fri Aug 15 02:15:20 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimDialogs.cpp:
	* src/QGaimDialogs.h:
	  - Changing the account in the drop-down list in the Join Chat
	    dialog now updates the widgets for specifying the
	    protocol-dependent chat information.
